kube-manifests/ts3server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ts3server
  namespace: ts3server
  labels:
    app: ts3server
spec:
  ports:
  - name: ts
    port: 9987
    protocol: UDP
    targetPort: 9987
  selector:
    app: ts3server
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 130.61.79.73
