kube-manifests/warp2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warp-socks-passwd
  namespace: stremio
  labels:
    app: warp-socks-passwd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warp-socks-passwd
  template:
    metadata:
      labels:
        app: warp-socks-passwd
    spec:
      containers:
      - name: warp-socks-passwd
        image: caomingjun/warp
        imagePullPolicy: Always
        env:
        - name: WARP_SLEEP
          value: "2"
        ports:
        - containerPort: 1080
          protocol: TCP
        securityContext:
          privileged: true
          capabilities:
            add:
            - NET_ADMIN
            - SYS_MODULE
        volumeMounts:
        - name: lib-modules
          mountPath: /lib/modules
          readOnly: true
        - name: sys
          mountPath: /sys
          readOnly: true
      volumes:
      - name: lib-modules
        hostPath:
          path: /lib/modules
          type: Directory
      - name: sys
        hostPath:
          path: /sys
          type: Directory
      restartPolicy: Always
      hostNetwork: false
      dnsPolicy: ClusterFirst

---

apiVersion: v1
kind: Service
metadata:
  name: warp-socks-passwd
  namespace: stremio
spec:
  selector:
    app: warp-socks-passwd
  ports:
  - name: socks-port
    port: 1080
    targetPort: 1080
    protocol: TCP
  type: ClusterIP
